# strat-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  StratEngine_Project-Brief_for-Claude-Code.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
apps/backtests/: apps.py  models.py  serializers.py  urls.py  views.py
apps/backtests/migrations/: 0001_initial.py
apps/core/: data.py  urls.py  views.py
apps/core/management/commands/: render_sample.py  seed_demo.py
apps/strategies/: apps.py  models.py  serializers.py  urls.py  validation.py  views.py
apps/strategies/migrations/: 0001_initial.py
brokers/: __init__.py
config/: asgi.py  settings.py  urls.py  wsgi.py
data/: BTC-USD.csv  README.md  SPY.csv
engine/: __init__.py  backtester.py  costs.py  datasource.py  indicators.py  metrics.py  reproducibility.py  rules.py  service.py
scripts/: fetch_fixtures.py
tests/: conftest.py  test_api_backtests.py  test_api_strategies.py  test_costs.py  test_datasource.py  test_health.py  test_indicators_causal.py  test_known_answer.py  test_metrics_regression.py  test_no_lookahead.py  test_render_sample.py  test_rules.py  test_seed.py  test_service.py
