[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strat-engine"
version = "0.1.0"
description = "Rule-based strategy backtesting (and paper-trading) backend — Django REST + a framework-free engine."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "StratEngine" }]

# Runtime dependencies. Pinned for reproducible builds (see also the CI image and Dockerfile,
# which install this exact set). The metrics/tearsheet library is `quantstats-lumi`, the
# maintained fork of QuantStats (the original is unmaintained and breaks on modern numpy/pandas).
dependencies = [
    "Django==5.1.15",
    "djangorestframework==3.15.2",
    "psycopg[binary]==3.2.13",
    "dj-database-url==2.3.0",
    "gunicorn==23.0.0",
    "whitenoise==6.12.0",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "ta==0.11.0",
    "quantstats-lumi==0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-django==4.12.0",
    "pytest-cov==6.3.0",
    "ruff==0.15.19",
    "black==25.12.0",
]

[tool.setuptools.packages.find]
include = ["config*", "apps*", "engine*", "brokers*"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP), comprehensions (C4)
select = ["E", "W", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]  # line length handled by black/formatter

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
testpaths = ["tests", "apps", "engine"]
addopts = "-ra -q"
# Message-scoped: silence known third-party plotting noise from QuantStats/seaborn/matplotlib
# tearsheet rendering without hiding our own warnings.
filterwarnings = [
    "ignore:.*vert.*was deprecated.*",
    "ignore:.*set_bad function will be deprecated.*",
    "ignore:.*identical low and high ylims.*",
    "ignore:.*invalid value encountered in multiply.*",
    "ignore:.*No directory at.*",
]

[tool.coverage.run]
branch = true
source = ["engine", "apps", "config", "brokers"]
omit = ["*/migrations/*", "*/tests/*", "*/test_*.py", "manage.py", "*/wsgi.py", "*/asgi.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
